Thu Jul  3 10:21:43 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: should not check "tcl.h" & "tk.h" when
	  --enable-tcltk-framework on MacOS X.

Thu Jul  3 10:03:17 2008  Tanaka Akira  <akr@fsij.org>

	* gc.c (Init_GC): fix syntax error.

Thu Jul  3 07:03:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_exc_new3): keeps the given string itself.

	* eval.c (Init_Proc), gc.c (Init_GC): freeze messages of preallocated
	  special exceptions also.

Thu Jul  3 06:17:23 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): duplicate the thrown exception to set backtrace
	  if it was frozen.  clear all raised flags.

	* eval.c (stack_check): leave clearing flag to rb_longjmp.

	* eval.c (rb_thread_set_raised, rb_thread_reset_raised): use generic
	  flags.

	* eval.c (Init_Proc), gc.c (Init_GC): freeze preallocated special exceptions.

	* gc.c (rb_memerror): use thread raised flag instead of static flag,
	  and raise nomem_error without backtrace if failed to make backtrace.
	  [ruby-dev:34724]

	* gc.c (ruby_xmalloc): increase malloc_increase only if malloc
	  succeeds.  failed malloc size can be huge.  it may increase
	  malloc_limit too big which cause less GC and memory full.
	  (ruby_xrealloc): ditto.

Thu Jul  3 05:11:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (PUSH_FRAME): suppress warnings.

	* eval.c (arg_defined): constified.

Thu Jul  3 05:09:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): need to pass a variable explicitly.

Thu Jul  3 02:47:53 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* gc.c: add rb_during_gc(). based on a patch from arton <artonx AT
	  yahoo.co.jp> at [ruby-dev:35313].   

	* intern.h: ditto.

Wed Jul  2 17:48:51 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/mkmf.rb (create_tmpsrc): we need to include COMMON_HEADERS,
	  namely inclusion of ruby.h, because _GNU_SOURCE is now defined